--- a/60_conclusion.tex
+++ b/60_conclusion.tex
@@ -1,5 +1,11 @@
 \chapter{Conclusion and Future Development} \newpage a \newpage a
 
+%\subsection{Node.scala} \newpage a \newpage a \newpage a \newpage a
+
+%Go + martini
+
 %threads_vs_events threads for different use-cases
+
+% reactive manifesto
 
 %C# 5 async
